--- a/Sobre-mi.html
+++ b/Sobre-mi.html
@@ -25,9 +25,7 @@
         <br>
         Tengo bastante experiencia con la teconología y la programación.
         <br> 
-        Tengo 16 años y aspiro a trabajar en la industria de la teconología, 
-        <br>
-        más concretamente en ciberseguridad.
+        Tengo 16 años y aspiro a trabajar en la industria de la teconología.
         <br>
         <br>
         <br>
