--- a/htmlycss.html
+++ b/htmlycss.html
@@ -27,7 +27,7 @@
       <br>
       increibles, y aunque no sé JavaScript por ahora, voy 
       <br>
-      a contar un poco mi experiencia con estos HTML y CSS.
+      a contar un poco mi experiencia con HTML y CSS.
       <br>
       <br>
       Para empezar quitémonos algunas preguntas de en medio:
@@ -58,6 +58,7 @@
       es fácil pero hay muchas cosas que tener en cuenta, así 
       <br>
       que <g>CSS</g>. 
+      <br>
       <br>
       <br>
       <br>
