--- a/Sobre-mi.html
+++ b/Sobre-mi.html
@@ -23,15 +23,15 @@
         <br>
         Soy programador y desarrollador de aplicaciones, webs y videojuegos. 
         <br>
-        Tengo bastante experiencia con la teconología y la programación.
+        Tengo bastante experiencia con la tecnología y la programación.
         <br> 
-        Tengo 16 años y aspiro a trabajar en la industria de la teconología.
+        Tengo 16 años y aspiro a trabajar en la industria de la tecnología.
         <br>
         <br>
         <br>
-        A lo largo de los años he ido aprendiendo y familiarizandome con varios idiomas de programación;
+        A lo largo de los años he ido aprendiendo y familiarizándome con varios idiomas de programación;
         <br>
-        Aquí te dejo algunos ejemplos de idiomas qué sé usar.
+        Aquí te dejo algunos ejemplos de idiomas que sé usar.
         <br>
       </p>
       <div class="python">
