Porteando a Móvil - Parte 3
Úlitima página terminada en cuanto a portear a móvil se refiere, solo falta arreglar fallos y rediseñar para acabar la sección de móvil.

--- a/Sobre-mi.html
+++ b/Sobre-mi.html
@@ -19,19 +19,19 @@
         ¿Quién soy?
       </h2>
       <p>
-        Me llamo Néstor Blanco. 
+        Me llamo <a>Néstor Blanco</a>. 
         <br>
         Soy programador y desarrollador de aplicaciones, webs y videojuegos. 
         <br>
-        Tengo bastante experiencia con la tecnología y la programación.
+        Tengo bastante experiencia con la <a>tecnología y la programación</a>.
         <br> 
-        Tengo 16 años y aspiro a trabajar en la industria de la tecnología.
+        Tengo <a>16 años</a> y aspiro a trabajar en la industria de la tecnología.
         <br>
         <br>
         <br>
         A lo largo de los años he ido aprendiendo y familiarizándome con varios idiomas de programación;
         <br>
-        Aquí te dejo algunos ejemplos de idiomas que sé usar.
+        Aquí te dejo algunos ejemplos de <a>idiomas</a> que sé usar.
         <br>
       </p>
       <div class="python">
