Updated Blogs Page
Updated blogs page so that it looks better and added 2 new proyect posts.

--- a/Blogs.html
+++ b/Blogs.html
@@ -2,6 +2,7 @@
   <head>
       <title>Blogs | N</title>
       <link rel="stylesheet" href="style_blogs.css">
+      <link rel="icon" type="image/png" href="N_Logo_Transparent.png"/>
   </head>
   <body>
     <div class="banner">
@@ -9,26 +10,35 @@
         <img size="10%" src="N-Logo-Mini.png" class="logo" href="Sobre-mi.html">
         <ul>
           <li><a href="index.html">Inicio</a></li>
-          <li><a href="Blogs.html">Blogs</a></li>
+          <li><a href="Blogs.html">Proyectos</a></li>
           <li><a href="Sobre-mi.html">Sobre Mí</a></li>
         </ul>
       </div>
     </div>
-    <div class="content">
-      <h2>
-        Blogs Recientes
-      </h2>
-    </div>
-    <div class="posts">
+    <ul class="content">
+      <li class="proyectos-title">
+        <h2>
+         Proyectos
+        </h2>
+      </li>
+      <li class="blogs-title">
+        <h2>
+          Blogs
+        </h2>
+      </li>
+    </ul>
+    <div class="blogs">
       <a href="htmlycss.html"><button type="button"><span></span>HTML y CSS</button><img size="10%" src="html.png" class="htmlycss-pic"></a> 
       <br>
       <a href="programandoenpython.html"><button type="button"><span></span>Programando en Python</button><img src="python.png" size="10%" class="programandoenpython-pic"></a>
       <br>
       <a href="micomienzo.html"><button type="button"><span></span>Mi Comienzo</button><img size="10%" src="N_Logo_Transparent.png" class="micomienzo-pic"></a> 
-      <br>
-      <br>
-      <br>
-      <h1>Próximamente... </h1>
     </div>
+    <div class="division"></div>
+    <ul class="posts">
+      <a href="miweb.html" class="miweb"><button class="button1" type="button"><span></span><img src="Imgs/MiWeb/miweb5.png"><h1>Mi Web</h1></button></a>
+      <a href="fiverr.html" class="fiverr"><button class="button2" type="button"><span></span><img src="Imgs/Fiverr/fiverr6.png"><h1>Fiverr.</h1></button></a>
+      
+    </ul>
   </body>
 </html>
