--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
   <head>
     <title>Inicio | N</title>
     <link rel="stylesheet" href="style_index.css">
+    <link rel="icon" type="image/png" href="N_Logo_Transparent.png"/>
   </head>
   <body>
     <div class="banner">
       <div class="navbar">
-        <img size="10%" src="N-Logo-Mini.png" class="logo" href="Sobre-mi.html">
+        <img size="10%" src="N_Logo_Transparent.png" class="logo" href="Sobre-mi.html">
         <ul>
           <li><a href="index.html">Inicio</a></li>
-          <li><a href="Blogs.html">Blogs</a></li>
+          <li><a href="Blogs.html">Proyectos</a></li>
           <li><a href="Sobre-mi.html">Sobre Mí</a></li>
         </ul>
       </div>
