--- a/Sobre-mi.html
+++ b/Sobre-mi.html
@@ -2,6 +2,7 @@
   <head>
       <title>Sobre Mí | N</title>
       <link rel="stylesheet" href="style_sobre.css">
+      <link rel="icon" type="image/png" href="N_Logo_Transparent.png"/>
   </head>
   <body>
     <div class="banner">
@@ -9,7 +10,7 @@
         <img size="10%" src="N-Logo-Mini.png" class="logo" href="Sobre-mi.html">
         <ul>
           <li><a href="index.html">Inicio</a></li>
-          <li><a href="Blogs.html">Blogs</a></li>
+          <li><a href="Blogs.html">Proyectos</a></li>
           <li><a href="Sobre-mi.html">Sobre Mí</a></li>
         </ul>
       </div>
