Added Google Analytics & Fixed some images
Google Analytics is up now, if everything is working as it should, and I changed some images from the proyect pages because I thought they were boring.

--- a/miweb.html
+++ b/miweb.html
@@ -5,8 +5,15 @@
     <link rel="icon" type="image/png" href="N_Logo_Transparent.png"/>
     <link
     rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
-    />
+    href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
+      <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KXZ6KKSG07"></script>
+    <script>
+     window.dataLayer = window.dataLayer || [];
+     function gtag(){dataLayer.push(arguments);}
+     gtag('js', new Date());
+     gtag('config', 'G-KXZ6KKSG07');
+    </script>
   </head>
   <body>
     <div class="banner">
@@ -40,7 +47,9 @@
       <div class="swiper-button-next"></div>
 
     </div>
+    
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+
     <script>
     const swiper = new Swiper('.swiper', {
       // Optional parameters
