--- a/micomienzo.html
+++ b/micomienzo.html
@@ -3,6 +3,14 @@
       <title>Mi Comienzo | N</title>
       <link rel="stylesheet" href="style_micomienzo.css">
       <link rel="icon" type="image/png" href="N_Logo_Transparent.png"/>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KXZ6KKSG07"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-KXZ6KKSG07');
+    </script>
   </head>
   <body>
     <div class="banner">
