Changed the main page
Erased the useless buttons.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="banner">
       <div class="navbar">
-        <img size="10%" src="N_Logo_Transparent.png" class="logo" href="Sobre-mi.html">
+        <img size="10%" src="N-Logo-Mini.png" class="logo" href="Sobre-mi.html">
         <ul>
           <li><a href="index.html">Inicio</a></li>
           <li><a href="Blogs.html">Proyectos</a></li>
@@ -27,10 +27,6 @@
         <a><h1>Blanco</h1></a>
         <img src="N_Logo_Transparent.png" class="logo_p">
         <p>La historia de mi carrera como programador. <br>Todo lo que he hecho y todo lo que sé hacer.</p>
-        <div>
-          <a href=Blogs.html><button type="button"><span></span>Ver más</button></a>
-          <a href="Sobre-mi.html"><button type="button"><span></span>Sobre...</button></a>
-        </div>
       </div>
     </div>
   </body>
