Changed logo and general font
Changed the logo from the old one, to the new one, made by Hylian. Also changed the font in the entirety of the website.

--- a/Blogs.html
+++ b/Blogs.html
@@ -15,7 +15,7 @@
   <body>
     <div class="banner">
       <div class="navbar">
-        <img size="10%" src="N-Logo-Mini.png" class="logo" href="Sobre-mi.html">
+        <img size="10%" src="LOGO-NESTEA-BLANCO.png" class="logo" href="Sobre-mi.html">
         <ul>
           <li><a href="index.html">Inicio</a></li>
           <li><a href="Blogs.html">Proyectos</a></li>
