--- a/Sobre-mi.html
+++ b/Sobre-mi.html
@@ -15,7 +15,7 @@
   <body>
     <div class="banner">
       <div class="navbar">
-        <img size="10%" src="N-Logo-Mini.png" class="logo" href="Sobre-mi.html">
+        <img size="10%" src="LOGO-NESTEA-BLANCO.png" class="logo" href="Sobre-mi.html">
         <ul>
           <li><a href="index.html">Inicio</a></li>
           <li><a href="Blogs.html">Proyectos</a></li>
@@ -43,8 +43,8 @@
         Aquí te dejo algunos ejemplos de <a>idiomas</a> que sé usar.
         <br>
       </p>
-      <div class="python">
-        <a><h1>Python</h1><img src="python.png" size=10% class="pythonimg"></a>
+      <div class="rust">
+        <a><h1>Rust</h1><img src="rust.png" size=10% class="rustimg"></a>
       </div>
       <div class="csharp">
         <a><h1>C#</h1><img src="csharp.png" size="10%" class="csharpimg"></a>
