--- a/fiverr.html
+++ b/fiverr.html
@@ -18,7 +18,7 @@
   <body>
     <div class="banner">
       <div class="navbar">
-        <img size="10%" src="N-Logo-Mini.png" class="logo" href="Sobre-mi.html">
+        <img size="10%" src="LOGO-NESTEA-BLANCO.png" class="logo" href="Sobre-mi.html">
         <ul>
           <li><a href="index.html">Inicio</a></li>
           <li><a href="Blogs.html">Proyectos</a></li>
@@ -29,11 +29,9 @@
     <ul class="content">
       <h2>Fiverr</h2>
     </ul>
-        <!-- Slider main container -->
-        <div class="swiper">
-          <!-- Additional required wrapper -->
+
+        <!-- <div class="swiper">
           <div class="swiper-wrapper">
-            <!-- Slides -->
             <div class="swiper-slide"><img src="Imgs/Fiverr/fiverr1.png" class="fiverr1"></div>
             <div class="swiper-slide"><img src="Imgs/Fiverr/fiverr2.png" class="fiverr2"></div>
             <div class="swiper-slide"><img src="Imgs/Fiverr/fiverr3.png" class="fiverr3"></div>
@@ -41,14 +39,12 @@
             <div class="swiper-slide"><img src="Imgs/Fiverr/fiverr5.png" class="fiverr5"></div>
             <div class="swiper-slide"><img src="Imgs/Fiverr/fiverr6.png" class="fiverr6"></div>
           </div>
-          <!-- If we need pagination -->
           <div class="swiper-pagination"></div>
     
-          <!-- If we need navigation buttons -->
           <div class="swiper-button-prev"></div>
           <div class="swiper-button-next"></div>
     
-        </div>
+        </div> -->
         <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
         <script>
         const swiper = new Swiper('.swiper', {
