--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="banner">
       <div class="navbar">
-        <img size="10%" src="N-Logo-Mini.png" class="logo" href="Sobre-mi.html">
+        <img size="10%" src="LOGO-NESTEA-BLANCO.png" class="logo" href="Sobre-mi.html">
         <ul>
           <li><a href="index.html">Inicio</a></li>
           <li><a href="Blogs.html">Proyectos</a></li>
@@ -23,9 +23,8 @@
         </ul>
       </div>
       <div class="content">
-        <h1>Néstor</h1>
-        <a><h1>Blanco</h1></a>
-        <img src="N_Logo_Transparent.png" class="logo_p">
+        <h1>Néstor Blanco</h1>
+        <img src="LOGO-NESTEA-COLOR.png" class="logo_p">
         <p>La historia de mi carrera como programador. <br>Todo lo que he hecho y todo lo que sé hacer.</p>
       </div>
     </div>
