Ported everything to Mobile.
Ported the new index page, the proyects page and the about page, and added a new only-blogs page to make everything cleaner on phone.

--- a/Blogs.html
+++ b/Blogs.html
@@ -44,9 +44,9 @@
     </div>
     <div class="division"></div>
     <ul class="posts">
-      <a href="miweb.html" class="miweb"><button class="button1" type="button"><span></span><img src="Imgs/MiWeb/miweb5.png"><h1>Mi Web</h1></button></a>
+      <a href="miweb.html" class="miweb"><button class="button1" type="button"><span></span><img src="LOGO-NESTEA-COLOR.png"><h1>Mi Web</h1></button></a>
       <a href="fiverr.html" class="fiverr"><button class="button2" type="button"><span></span><img src="Imgs/Fiverr/fiverr6.png"><h1>Fiverr.</h1></button></a>
-      
     </ul>
+    <a href="only-blogs.html"><p class="blog-button">Ir a Blogs -> </p></a>
   </body>
 </html>
