Changed the icon

--- a/Blogs.html
+++ b/Blogs.html
@@ -2,7 +2,7 @@
   <head>
       <title>Blogs | N</title>
       <link rel="stylesheet" href="style_blogs.css">
-      <link rel="icon" type="image/png" href="N_Logo_Transparent.png"/>
+      <link rel="icon" type="image/png" href="LOGO-NESTEA-COLOR.png"/>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-KXZ6KKSG07"></script>
     <script>
