--- a/Blogs.html
+++ b/Blogs.html
@@ -43,10 +43,10 @@
       <a href="micomienzo.html"><button type="button"><span></span>Mi Comienzo</button><img size="10%" src="N_Logo_Transparent.png" class="micomienzo-pic"></a> 
     </div>
     <div class="division"></div>
-    <ul class="posts">
+    <div class="posts">
       <a href="miweb.html" class="miweb"><button class="button1" type="button"><span></span><img src="LOGO-NESTEA-COLOR.png"><h1>Mi Web</h1></button></a>
-      <a href="fiverr.html" class="fiverr"><button class="button2" type="button"><span></span><img src="Imgs/Fiverr/fiverr6.png"><h1>Fiverr.</h1></button></a>
-    </ul>
+      <a href="fiverr.html" class="fiverr"><button class="button1" type="button"><span></span><img src="Imgs/Fiverr/fiverr6.png"><h1>Fiverr.</h1></button></a>
+    </div>
     <a href="only-blogs.html"><p class="blog-button">Ir a Blogs -> </p></a>
   </body>
 </html>
