--- a/Blogs.html
+++ b/Blogs.html
@@ -23,29 +23,23 @@
         </ul>
       </div>
     </div>
-    <ul class="content">
-      <li class="proyectos-title">
-        <h2>
-         Proyectos
-        </h2>
-      </li>
-      <li class="blogs-title">
-        <h2>
-          Blogs
-        </h2>
-      </li>
-    </ul>
     <div class="blogs">
-      <a href="htmlycss.html"><button type="button"><span></span>HTML y CSS</button><img size="10%" src="html.png" class="htmlycss-pic"></a> 
-      <br>
-      <a href="programandoenpython.html"><button type="button"><span></span>Programando en Python</button><img src="python.png" size="10%" class="programandoenpython-pic"></a>
-      <br>
-      <a href="micomienzo.html"><button type="button"><span></span>Mi Comienzo</button><img size="10%" src="N_Logo_Transparent.png" class="micomienzo-pic"></a> 
+      <div class="blogs-title"><h2>Blogs</h2></div>
+      <div class="actual-blogs">
+        <a href="htmlycss.html"><button type="button"><span></span>HTML y CSS</button><img size="10%" src="html.png" class="htmlycss-pic"></a> 
+        <br>
+        <a href="programandoenpython.html"><button type="button"><span></span>Programando en Python</button><img src="python.png" size="10%" class="programandoenpython-pic"></a>
+        <br>
+        <a href="micomienzo.html"><button type="button"><span></span>Mi Comienzo</button><img size="10%" src="N_Logo_Transparent.png" class="micomienzo-pic"></a> 
+      </div>
     </div>
     <div class="division"></div>
     <div class="posts">
-      <a href="miweb.html" class="miweb"><button class="button1" type="button"><span></span><img src="LOGO-NESTEA-COLOR.png"><h1>Mi Web</h1></button></a>
-      <a href="fiverr.html" class="fiverr"><button class="button1" type="button"><span></span><img src="Imgs/Fiverr/fiverr6.png"><h1>Fiverr.</h1></button></a>
+      <div class="proyectos-title"><h2>Proyectos</h2></div>
+      <div class="actual-posts">
+        <a href="miweb.html" class="miweb"><button class="button1" type="button"><span></span><img src="LOGO-NESTEA-COLOR.png"><h1>Mi Web</h1></button></a>
+        <a href="fiverr.html" class="fiverr"><button class="button1" type="button"><span></span><img src="Imgs/Fiverr/fiverr6.png"><h1>Fiverr.</h1></button></a>
+      </div>
     </div>
     <a href="only-blogs.html"><p class="blog-button">Ir a Blogs -> </p></a>
   </body>
