--- a/Blogs.html
+++ b/Blogs.html
@@ -39,6 +39,7 @@
       <div class="actual-posts">
         <a href="miweb.html" class="miweb"><button class="button1" type="button"><span></span><img src="LOGO-NESTEA-COLOR.png"><h1>Mi Web</h1></button></a>
         <a href="fiverr.html" class="fiverr"><button class="button1" type="button"><span></span><img src="Imgs/Fiverr/fiverr6.png"><h1>Fiverr.</h1></button></a>
+        <a href="deharovirtual.html" class="deharovirtual"><button class="button1" type="button"><span></span><img src="Logo-Transparente.png"><h1>DeHaroVirtual</h1></button></a>
       </div>
     </div>
     <a href="only-blogs.html"><p class="blog-button">Ir a Blogs -> </p></a>
