Rust page added

--- a/Blogs.html
+++ b/Blogs.html
@@ -26,6 +26,8 @@
     <div class="blogs">
       <div class="blogs-title"><h2>Blogs</h2></div>
       <div class="actual-blogs">
+        <a href="rust.html"><button type="button"><span></span>Rust</button><img size="10%" src="rust.png" class="rust-pic"></a> 
+        <br>
         <a href="htmlycss.html"><button type="button"><span></span>HTML y CSS</button><img size="10%" src="html.png" class="htmlycss-pic"></a> 
         <br>
         <a href="programandoenpython.html"><button type="button"><span></span>Programando en Python</button><img src="python.png" size="10%" class="programandoenpython-pic"></a>
