--- a/Sobre-mi.html
+++ b/Sobre-mi.html
@@ -44,7 +44,7 @@
         <br>
       </p>
       <div class="rust">
-        <a><h1>Rust</h1><img src="rust.png" size=10% class="rustimg"></a>
+        <a><h1>Rust</h1><img src="Imgs/Rust/rust1.png" size=10% class="rustimg"></a>
       </div>
       <div class="csharp">
         <a><h1>C#</h1><img src="csharp.png" size="10%" class="csharpimg"></a>
