--- a/miweb.html
+++ b/miweb.html
@@ -25,15 +25,130 @@
     </div>
     <ul class="content">
       <h2>Mi Web</h2>
+      <div id="slider">
+        <figure>
+          <img src="Imgs/MiWeb/miweb1.png" class="img1">
+          <img src="Imgs/MiWeb/miweb2.png" class="img2">
+          <img src="Imgs/MiWeb/miweb3.png" class="img3">
+          <img src="Imgs/MiWeb/miweb4.png" class="img4">
+          <img src="Imgs/MiWeb/miweb1.png" class="img5">
+        </figure>
+      </div>
+      <div class="text">
+        <p>
+          <b>Cómo creé esta web</b>
+          <br>
+          <br>
+          Hoy ya hace bastante que creé esta web, y aún sigo 
+          <br>
+          haciendo cambios de vez en cuando, normalmente 
+          <br>
+          para añadir contenido. 
+          <br>
+          <br>
+          Esta web es mi proyecto más grande hasta la fecha, 
+          <br>
+          aunque no el más ambicioso ni el mejor. Tengo una entrada sobre 
+          <br>
+          cómo construí esta web desde el principio así que no me iré 
+          <br>
+          mucho por ese tema aquí.
+          <br>
+          <br>
+          Hoy me voy a centrar en lo realmente importante: los problemas más
+          <br>
+          grandes que me han surgido, quién me ha ayudado, a qué he acudido 
+          <br>
+          cuando no sabía cómo hacer alguna cosa...etc. 
+          <br>
+          <br>
+          <br>
+          <a>Mis problemas más grandes</a>
+          <br>
+          <br>
+          Al comienzo de este proyecto, CSS era infernal; no sabía qué hacer, 
+          <br>
+          cómo ni donde, pero esto al cabo de un tiempo desapareció, aunque es 
+          <br>
+          cierto que me llevó algo de trabajo acostumbrarme. 
+          <br>
+          <br>
+          Sin duda, el problema más grande que me ha surgido en este proyecto 
+          <br>
+          ha sido el porteo a móvil. A día de hoy de hecho, esta web en móvil
+          <br>
+          sigue siendo un desastre debido a que soy un pésimo programador de 
+          <br>
+          webs en móvil. 
+          <br>
+          <br>
+          Sobretodo, debido a que hay diferentes móviles y cada uno con una
+          <br>
+          disposición distinta, es muy complicado ajustarlo para todos. Además 
+          <br>
+          las imágenes de vez en cuando se estiran o comprimen fastidiando 
+          <br>
+          todo, y lo único que pude hacer es ajustarlo para que quedase medio
+          <br>
+          normal en un móvil común. 
+          <br>
+          <br>
+          <br>
+          <a>Ayudas</a>
+          <br>
+          <br>
+          La verdad es que nadie me ha ayudado en este proyecto, 
+          <br>
+          nunca he consultado ayuda a mis amigos programadores 
+          <br>
+          para trabajar en esta web, lo cual refleja bastante bien
+          <br>
+          que este proyecto no ha sido demasiado tedioso.
+          <br>
+          <br>
+          <br>
+          <a>¿A quién he acudido cuando necesitaba ayuda?</a>
+          <br>
+          <br>
+          Cuando tuve alguna duda que no sabía cómo resolver,
+          <br>
+          hacía lo que cualquier persona decente; buscar
+          <br>
+          tutoriales. 
+          <br>
+          <br>
+          Y es que por muy absurdo que parezca, el esquema principal
+          <br>
+          de esta web la hice siguiendo al pie de la letra 
+          <br>
+          un tutorial, y a día de hoy los sigo teniendo
+          <br>
+          como alternativa cuando no sé cómo hacer algo. 
+          <br>
+          <br>
+          Definitivamente lo recomiendo a cualquiera que 
+          <br>
+          esté empezando en programación. 
+          <br>
+          <br>
+          <br>
+          En resumen, esta web es mi mayor proyecto hasta la 
+          <br>
+          fecha, lo he ido curtiendo poco a poco, superando cada
+          <br>
+          dificultad. Nada de lo que ves en pantalla habría existido
+          <br>
+          jamás si no fuera por los tutoriales que ví cuando estaba 
+          <br>
+          aprendiendo, y gracias a ellos he aprendido mucho de lo que sé.
+          <br>
+          <br>
+          <br>
+          - Néstor Blanco 12-06-2023
+          <br>
+          <br>
+        </p>
+      </div>
     </ul>
-    <div id="slider">
-      <figure>
-        <img src="Imgs/MiWeb/miweb1.png" class="img1">
-        <img src="Imgs/MiWeb/miweb2.png" class="img2">
-        <img src="Imgs/MiWeb/miweb3.png" class="img3">
-        <img src="Imgs/MiWeb/miweb4.png" class="img4">
-        <img src="Imgs/MiWeb/miweb1.png" class="img5">
-      </figure>
-    </div>
   </body>
 </html>
