deharovirtual finished (no imgs)

--- a/deharovirtual.html
+++ b/deharovirtual.html
@@ -23,99 +23,99 @@
         </ul>
       </div>
     </div>
-    <ul class="content">
+    <div class="content">
       <h2>DeHaroVirtual</h2>
-    </ul>
-    <div id="slider">
-      <figure>
-        <img src="Imgs/DeHaroVirtual/Cap1.png" class="img1">
-        <img src="Imgs/DeHaroVirtual/Cap2.png" class="img2">
-        <img src="Imgs/DeHaroVirtual/Cap3.png" class="img3">
-        <img src="Imgs/DeHaroVirtual/Cap4.png" class="img4">
-        <img src="Imgs/DeHaroVirtual/Cap1.png" class="img5">
-      </figure>
+      <div class="slider">
+        <figure>
+          <img src="Imgs/DeHaroVirtual/Cap1.png" class="img1">
+          <img src="Imgs/DeHaroVirtual/Cap2.png" class="img2">
+          <img src="Imgs/DeHaroVirtual/Cap3.png" class="img3">
+          <img src="Imgs/DeHaroVirtual/Cap4.png" class="img4">
+          <img src="Imgs/DeHaroVirtual/Cap1.png" class="img5">
+        </figure>
+      </div>
+      <p>
+        <h>Cómo he hecho esta web</h>
+        <br>
+        <br>
+        La creación de esta web se remonta a un amigo mío 
+        <br>
+        y ha mi falta de práctica en el desarrollo web.
+        <br>
+        Mi amigo (@deharovirtual en instagram y twitter)
+        <br>
+        se enteró de que iba a hacer una web de ejemplo
+        <br>
+        amplia para mejorar mis habilidades, y me 
+        <br>
+        preguntó si la quería hacer para él. 
+        <br>
+        <br>
+        Yo obviamente accedí y empecé a trabajar.
+        <br>
+        A día de hoy la web se ha dejado en un 
+        <br>
+        estado semi-acabado, en el que a pesar de 
+        <br>
+        que mi amigo y yo teníamos más cosas pensadas
+        <br>
+        no se van a llevar a cabo por diversos motivos. 
+        <br>
+        <br>
+        <br>
+        <b>¿Cómo os organizasteis?</b>
+        <br>
+        <br>
+        Aunque mi amigo era el que me enseñaba un poco 
+        <br>
+        cómo quería la interfaz, el apartado creativo
+        <br>
+        se me asignó completamente a mí. 
+        <br>
+        <br>
+        El fondo, el modo de enseñar y estructurar las imágenes,
+        <br>
+        al igual que los hipervínculos son todo diseño mío. He de 
+        <br>
+        admitir que no fue fácil y estuve probando bastante. 
+        <br>
+        <br>
+        <br>
+        <b>¿Qué problemas te surgieron?</b>
+        <br>
+        <br>
+        Creando esta web no tuve prácticamente ningún problema 
+        <br> 
+        ya que ya tenía experiencia previa con webs y no hice 
+        <br>
+        nada nuevo ni con JS. 
+        <br>
+        <br>
+        A pesar de esto, la web actualmente no está porteada
+        <br>
+        a móvil.
+        <br>
+        <br>
+        <br>
+        <b>¿Dónde puedo ver la web?</b>
+        <br>
+        <br>
+        Cualquiera que quiera puede visitar la web
+        <br>
+        mediante <a href="https://blecuatec.github.io/deharovirtual.github.io/">este link</a>.
+        <br>
+        <br>
+        <br>
+        <br>
+        La web en sí no fue mucha cosa debido a que no 
+        <br>
+        implementé nada nuevo y fué un proyecto 
+        <br>
+        bastante ameno. 
+        <br>
+        <br>
+        - Néstor Blanco 22/06/2023
+      </p>
     </div>
-    <p>
-      <a>Cómo he hecho esta web</a>
-      <br>
-      <br>
-      La creación de esta web se remonta a un amigo mío 
-      <br>
-      y ha mi falta de práctica en el desarrollo web.
-      <br>
-      Mi amigo (@deharovirtual en instagram y twitter)
-      <br>
-      se enteró de que iba a hacer una web de ejemplo
-      <br>
-      amplia para mejorar mis habilidades, y me 
-      <br>
-      preguntó si la quería hacer para él. 
-      <br>
-      <br>
-      Yo obviamente accedí y empecé a trabajar.
-      <br>
-      A día de hoy la web se ha dejado en un 
-      <br>
-      estado semi-acabado, en el que a pesar de 
-      <br>
-      que mi amigo y yo teníamos más cosas pensadas
-      <br>
-      no se van a llevar a cabo por diversos motivos. 
-      <br>
-      <br>
-      <br>
-      <b>¿Cómo os organizasteis?</b>
-      <br>
-      <br>
-      Aunque mi amigo era el que me enseñaba un poco 
-      <br>
-      cómo quería la interfaz, el apartado creativo
-      <br>
-      se me asignó completamente a mí. 
-      <br>
-      <br>
-      El fondo, el modo de enseñar y estructurar las imágenes,
-      <br>
-      al igual que los hipervínculos son todo diseño mío. He de 
-      <br>
-      admitir que no fue fácil y estuve probando bastante. 
-      <br>
-      <br>
-      <br>
-      <b>¿Qué problemas te surgieron?</b>
-      <br>
-      <br>
-      Creando esta web no tuve prácticamente ningún problema 
-      <br> 
-      ya que ya tenía experiencia previa con webs y no hice 
-      <br>
-      nada nuevo ni con JS. 
-      <br>
-      <br>
-      A pesar de esto, la web actualmente no está porteada
-      <br>
-      a móvil.
-      <br>
-      <br>
-      <br>
-      <b>¿Dónde puedo ver la web?</b>
-      <br>
-      <br>
-      Cualquiera que quiera puede visitar la web
-      <br>
-      mediante <h>este link</h>.
-      <br>
-      <br>
-      <br>
-      <br>
-      La web en sí no fue mucha cosa debido a que no 
-      <br>
-      implementé nada nuevo y fué un proyecto 
-      <br>
-      bastante ameno. 
-      <br>
-      <br>
-      - Néstor Blanco 22/06/2023
-    </p>
   </body>
 </html>
