--- a/Blogs.html
+++ b/Blogs.html
@@ -41,9 +41,16 @@
     <div class="posts">
       <div class="proyectos-title"><h2>Proyectos</h2></div>
       <div class="actual-posts">
-        <a href="miweb.html" class="miweb"><button class="button1" type="button"><span></span><img src="LOGO-NESTEA-COLOR.png"><h1>Mi Web</h1></button></a>
-        <a href="fiverr.html" class="fiverr"><button class="button1" type="button"><span></span><img src="Imgs/Fiverr/fiverr6.png"><h1>Fiverr.</h1></button></a>
-        <a href="deharovirtual.html" class="deharovirtual"><button class="button1" type="button"><span></span><img src="Logo-Transparente.png"><h1>DeHaroVirtual</h1></button></a>
+        <div class="first-row">
+          <a href="miweb.html" class="miweb"><button class="button1" type="button"><span></span><img src="LOGO-NESTEA-COLOR.png"><h1>Mi Web</h1></button></a>
+          <a href="fiverr.html" class="fiverr"><button class="button1" type="button"><span></span><img src="Imgs/Fiverr/fiverr6.png"><h1>Fiverr.</h1></button></a>
+          <a href="deharovirtual.html" class="deharovirtual"><button class="button1" type="button"><span></span><img src="Logo-Transparente.png"><h1>DeHaroVirtual</h1></button></a>
+        </div>
+        <div class="second-row">
+          <a href="contarcartas.html" class="contarcartas"><button class="button1" type="button"><span></span><img src="Imgs/ContarCartas/contarcartas1.png"><h1>Contar Cartas</h1></button></a>
+          <a></a>
+          <a></a>
+        </div>
       </div>
     </div>
     <a href="only-blogs.html"><p class="blog-button">Ir a Blogs -> </p></a>
