--- a/contarcartas.html
+++ b/contarcartas.html
@@ -25,15 +25,98 @@
     </div>
     <ul class="content">
       <h2>Contar Cartas</h2>
+      <div id="slider">
+        <figure>
+          <img src="Imgs/ContarCartas/contarcartas3.png" class="img1">
+          <img src="Imgs/ContarCartas/contarcartas2.png" class="img2">
+          <img src="Imgs/ContarCartas/cardcounting4.png" class="img3">
+          <img src="Imgs/ContarCartas/cardcounting5.png" class="img4">
+          <img src="Imgs/ContarCartas/contarcartas3.png" class="img5">
+        </figure>
+      </div>
+      <div class="text">
+        <p>
+          <b>Simulación de Contar Cartas</b>
+          <br>
+          <br>
+          <br>
+          Hace no mucho me interesé por cómo 
+          <br>
+          contar cartas en Blackjack para ganar 
+          <br>
+          contra casinos, y dejando de lado todo 
+          <br>
+          lo que tiene y lo que no, constantemente
+          <br>
+          me preguntaba: 
+          <br>
+          <br>
+          <a>¿De verdad esto funcionará?</a>
+          <br>
+          <br>
+          <br>
+          Ahí es cuando recordé que soy programador y que
+          <br>
+          puedo perfectamente simular millones de partidas de 
+          <br>
+          Blackjack contando cartas para averiguar si realmente
+          <br>
+          funciona o no, y así es como nació este proyecto.
+          <br>
+          <br>
+          <br>
+          <b>Programación</b>
+          <br>
+          <br>
+          El apartado de programación de este 
+          <br>
+          proyectos fue especialmente divertido, no sé 
+          <br>
+          muy bien porqué.
+          <br>
+          <br>
+          Supongo que programar simulaciones es bastante 
+          <br>
+          divertido y me he dado cuenta ahora, pero sí, 
+          <br>
+          implementar todas las reglas del Blackjack
+          <br>
+          correctamente fue bastante divertido. 
+          <br>
+          <br>
+          <br>
+          <b>Resultados</b>
+          <br>
+          <br>
+          Tras acabar el proyecto, mis teorías fueron
+          <br>
+          confirmadas. Empezando con 10.000€ y jugando 
+          <br>
+          aproximadamente 1.000.000 de rondas de 
+          <br>
+          Blackjack, la simulación devolvía constantemente
+          <br>
+          unos 13.000.000€. 
+          <br>
+          <br>
+          Esto, si mi código es correcto, significa que contar 
+          <br>
+          cartas sí funciona. Eso sí, teniendo en cuenta que los escenarios
+          <br>
+          son bastante favorables: no todo el mundo empieza a contar
+          <br>
+          cartas con 10.000€, y no estamos teniendo en cuenta las veces 
+          <br>
+          que se arruina.
+          <br>
+          <br>
+          Si alguien quiere hecharle un vistazo al proyecto dejo 
+          <br>
+          aquí el link del repositorio de Github:
+          <br>
+          <a href="https://github.com/Nestea009/CountingCards">https://github.com/Nestea009/CountingCards</a>
+        </p>
+      </div>
     </ul>
-    <div id="slider">
-      <figure>
-        <img src="Imgs/ContarCartas/contarcartas3.png" class="img1">
-        <img src="Imgs/ContarCartas/contarcartas2.png" class="img2">
-        <img src="Imgs/ContarCartas/cardcounting4.png" class="img3">
-        <img src="Imgs/ContarCartas/cardcounting5.png" class="img4">
-        <img src="Imgs/ContarCartas/contarcartas3.png" class="img5">
-      </figure>
-    </div>
   </body>
 </html>
