--- a/Blogs.html
+++ b/Blogs.html
@@ -47,7 +47,7 @@
           <a href="deharovirtual.html" class="deharovirtual"><button class="button1" type="button"><span></span><img src="Logo-Transparente.png"><h1>DeHaroVirtual</h1></button></a>
         </div>
         <div class="second-row">
-          <a href="contarcartas.html" class="contarcartas"><button class="button1" type="button"><span></span><img src="Imgs/ContarCartas/contarcartas1.png"><h1>Contar Cartas</h1></button></a>
+          <a href="contarcartas.html" class="contarcartas"><button class="button1" type="button"><span></span><img src="Imgs/ContarCartas/contarcartas1.png"><h1>Simulación Contar Cartas</h1></button></a>
           <a></a>
           <a></a>
         </div>
