--- a/Blogs.html
+++ b/Blogs.html
@@ -32,7 +32,7 @@
         <br>
         <a href="htmlycss.html"><button type="button"><span></span>HTML y CSS</button><img size="10%" src="html.png" class="htmlycss-pic"></a> 
         <br>
-        <a href="programandoenpython.html"><button type="button"><span></span>Programando en Python</button><img src="python.png" size="10%" class="programandoenpython-pic"></a>
+        <a href="programandoenpython.html"><button type="button"><span></span>Python</button><img src="python.png" size="10%" class="programandoenpython-pic"></a>
         <br>
         <a href="micomienzo.html"><button type="button"><span></span>Mi Comienzo</button><img size="10%" src="N_Logo_Transparent.png" class="micomienzo-pic"></a> 
       </div>
