--- a/programandoenpython.html
+++ b/programandoenpython.html
@@ -25,7 +25,7 @@
     </div>
     <div class="content">
       <h2>
-        Programando en Python
+        Python
       </h2>
       <p>
       Python es considerado por muchos el idioma de programación
