--- a/Sobre-mi.html
+++ b/Sobre-mi.html
@@ -34,7 +34,7 @@
         <br>
         Tengo bastante experiencia con la <a>tecnología y la programación</a>.
         <br> 
-        Tengo <a>18 años</a> y aspiro a trabajar en la industria de la tecnología.
+        Tengo <a>19 años</a> y aspiro a trabajar en la industria de la tecnología.
         <br>
         <br>
         <br>
@@ -43,8 +43,8 @@
         Aquí te dejo algunos ejemplos de <a>idiomas</a> que sé usar.
         <br>
       </p>
-      <div class="rust">
-        <a><h1>Rust</h1><img src="Imgs/Rust/rust1.png" size=10% class="rustimg"></a>
+      <div class="cpp">
+        <a><h1>C++</h1><img src="Imgs/Cpp/cppLogo.png" size=10% class="cppimg"></a>
       </div>
       <div class="csharp">
         <a><h1>C#</h1><img src="csharp.png" size="10%" class="csharpimg"></a>
