Changed the entire structure

--- a/src/HTML/Sobre-mi.html
+++ b/src/HTML/Sobre-mi.html
@@ -1,8 +1,8 @@
 <html>
   <head>
       <title>Sobre Mí | N</title>
-      <link rel="stylesheet" href="style_sobre.css">
-      <link rel="icon" type="image/png" href="LOGO-NESTEA-COLOR.png"/>
+      <link rel="stylesheet" href="../CSS/style_sobre.css">
+      <link rel="icon" type="image/png" href="../../Imgs/Other/LOGO-NESTEA-COLOR.png"/>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-KXZ6KKSG07"></script>
     <script>
@@ -15,7 +15,7 @@
   <body>
     <div class="banner">
       <div class="navbar">
-        <img size="10%" src="LOGO-NESTEA-BLANCO.png" class="logo" href="Sobre-mi.html">
+        <img size="10%" src="../../Imgs/Other/LOGO-NESTEA-BLANCO.png" class="logo" href="Sobre-mi.html">
         <ul>
           <li><a href="index.html">Inicio</a></li>
           <li><a href="Blogs.html">Proyectos</a></li>
@@ -44,16 +44,16 @@
         <br>
       </p>
       <div class="cpp">
-        <a><h1>C++</h1><img src="Imgs/Cpp/cppLogo.png" size=10% class="cppimg"></a>
+        <a><h1>C++</h1><img src="../../Imgs/Cpp/cppLogo.png" size=10% class="cppimg"></a>
       </div>
       <div class="csharp">
-        <a><h1>C#</h1><img src="csharp.png" size="10%" class="csharpimg"></a>
+        <a><h1>C#</h1><img src="../../Imgs/Other/csharp.png" size="10%" class="csharpimg"></a>
       </div>
       <div class="html">
-        <a><h1>HTML</h1><img src="html.png" size="10%" class="htmlimg"></a>
+        <a><h1>HTML</h1><img src="../../Imgs/Other/html.png" size="10%" class="htmlimg"></a>
       </div>
       <div class="css">
-        <a><h1>CSS</h1><img src="css.png" size="10%" class="cssimg"></a>
+        <a><h1>CSS</h1><img src="../../Imgs/Other/css.png" size="10%" class="cssimg"></a>
       </div>
     </div>
   </body>
