--- a/src/HTML/htmlycss.html
+++ b/src/HTML/htmlycss.html
@@ -1,8 +1,8 @@
 <html>
   <head>
       <title>HTML y CSS | N</title>
-      <link rel="stylesheet" href="style_htmlycss.css">
-      <link rel="icon" type="image/png" href="LOGO-NESTEA-COLOR.png"/>
+      <link rel="stylesheet" href="../CSS/style_htmlycss.css">
+      <link rel="icon" type="image/png" href="../../Imgs/Other/LOGO-NESTEA-COLOR.png"/>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-KXZ6KKSG07"></script>
     <script>
@@ -15,7 +15,7 @@
   <body>
     <div class="banner">
       <div class="navbar">
-        <img size="10%" src="LOGO-NESTEA-BLANCO.png" class="logo" href="Sobre-mi.html">
+        <img size="10%" src="../../Imgs/Other/LOGO-NESTEA-BLANCO.png" class="logo" href="Sobre-mi.html">
         <ul>
           <li><a href="index.html">Inicio</a></li>
           <li><a href="Blogs.html">Proyectos</a></li>
@@ -98,9 +98,9 @@
       -Néstor Blanco  25-09-2022 
       </p>
       <div class="pics">
-        <img src="html.png" class="html-pic">
-        <img src="css.png" class="css-pic">
-        <img src="htmlcode.png" class="htmlcode-pic">
+        <img src="../../Imgs/Other/html.png" class="html-pic">
+        <img src="../../Imgs/Other/css.png" class="css-pic">
+        <img src="../../Imgs/Other/htmlcode.png" class="htmlcode-pic">
       </div>
     </div>
   </body>
