--- a/src/HTML/miweb.html
+++ b/src/HTML/miweb.html
@@ -1,8 +1,8 @@
 <html>
   <head>
     <title>Mi Web | N</title>
-    <link rel="stylesheet" href="style_miweb.css">
-    <link rel="icon" type="image/png" href="LOGO-NESTEA-COLOR.png"/>
+    <link rel="stylesheet" href="../CSS/style_miweb.css">
+    <link rel="icon" type="image/png" href="../../Imgs/Other/LOGO-NESTEA-COLOR.png"/>
       <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-KXZ6KKSG07"></script>
     <script>
@@ -15,7 +15,7 @@
   <body>
     <div class="banner">
       <div class="navbar">
-        <img size="10%" src="LOGO-NESTEA-BLANCO.png" class="logo" href="Sobre-mi.html">
+        <img size="10%" src="../../Imgs/Other/LOGO-NESTEA-BLANCO.png" class="logo" href="Sobre-mi.html">
         <ul>
           <li><a href="index.html">Inicio</a></li>
           <li><a href="Blogs.html">Proyectos</a></li>
@@ -27,11 +27,11 @@
       <h2>Mi Web</h2>
       <div id="slider">
         <figure>
-          <img src="Imgs/MiWeb/miweb1.png" class="img1">
-          <img src="Imgs/MiWeb/miweb2.png" class="img2">
-          <img src="Imgs/MiWeb/miweb3.png" class="img3">
-          <img src="Imgs/MiWeb/miweb4.png" class="img4">
-          <img src="Imgs/MiWeb/miweb1.png" class="img5">
+          <img src="../../Imgs/MiWeb/miweb1.png" class="img1">
+          <img src="../../Imgs/MiWeb/miweb2.png" class="img2">
+          <img src="../../Imgs/MiWeb/miweb3.png" class="img3">
+          <img src="../../Imgs/MiWeb/miweb4.png" class="img4">
+          <img src="../../Imgs/MiWeb/miweb1.png" class="img5">
         </figure>
       </div>
       <div class="text">
