--- a/src/HTML/programandoenpython.html
+++ b/src/HTML/programandoenpython.html
@@ -1,8 +1,8 @@
 <html>
   <head>
       <title>Programando en Python | N</title>
-      <link rel="stylesheet" href="style_programandoenpython.css">
-      <link rel="icon" type="image/png" href="LOGO-NESTEA-COLOR.png"/>
+      <link rel="stylesheet" href="../CSS/style_programandoenpython.css">
+      <link rel="icon" type="image/png" href="../../Imgs/Other/LOGO-NESTEA-COLOR.png"/>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-KXZ6KKSG07"></script>
     <script>
@@ -15,7 +15,7 @@
   <body>
     <div class="banner">
       <div class="navbar">
-        <img size="10%" src="LOGO-NESTEA-BLANCO.png" class="logo" href="Sobre-mi.html">
+        <img size="10%" src="../../Imgs/Other/LOGO-NESTEA-BLANCO.png" class="logo" href="Sobre-mi.html">
         <ul>
           <li><a href="index.html">Inicio</a></li>
           <li><a href="Blogs.html">Proyectos</a></li>
@@ -102,9 +102,9 @@
       -Néstor Blanco  23-09-2022 
       </p>
       <div class="pics">
-        <img src="python.png" class="python-pic">
-        <img src="calculadora.png" class="calculadora-pic">
-        <div id="rectangle1"><img src="django_logo.png" class="django-pic"></div>
+        <img src="../../Imgs/Other/python.png" class="python-pic">
+        <img src="../../Imgs/Other/calculadora.png" class="calculadora-pic">
+        <div id="rectangle1"><img src="../../Imgs/Other/django_logo.png" class="django-pic"></div>
       </div>
     </div>
   </body>
