--- a/src/HTML/react.html
+++ b/src/HTML/react.html
@@ -1,8 +1,8 @@
 <html>
   <head>
       <title>React | N</title>
-      <link rel="stylesheet" href="style_react.css">
-      <link rel="icon" type="image/png" href="LOGO-NESTEA-COLOR.png"/>
+      <link rel="stylesheet" href="../CSS/style_react.css">
+      <link rel="icon" type="image/png" href="../../Imgs/Other/LOGO-NESTEA-COLOR.png"/>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-KXZ6KKSG07"></script>
     <script>
@@ -15,7 +15,7 @@
   <body>
     <div class="banner">
       <div class="navbar">
-        <img size="10%" src="LOGO-NESTEA-BLANCO.png" class="logo" href="Sobre-mi.html">
+        <img size="10%" src="../../Imgs/Other/LOGO-NESTEA-BLANCO.png" class="logo" href="Sobre-mi.html">
         <ul>
           <li><a href="index.html">Inicio</a></li>
           <li><a href="Blogs.html">Proyectos</a></li>
@@ -50,15 +50,15 @@
       <div class="frameworks">
         <div class="framework">
           Angular
-          <img src="Imgs/React/Frameworks/Angular.png" class="framework-img">
+          <img src="../../Imgs/React/Frameworks/Angular.png" class="framework-img">
         </div>
         <div class="framework">
           React
-          <img src="Imgs/React/Frameworks/React.png" class="framework-img">
+          <img src="../../Imgs/React/Frameworks/React.png" class="framework-img">
         </div>
         <div class="framework">
           Vue
-          <img src="Imgs/React/Frameworks/Vue.png" class="framework-img">
+          <img src="../../Imgs/React/Frameworks/Vue.png" class="framework-img">
         </div>
       </div>
       <p>
@@ -129,9 +129,9 @@
         -Néstor Blanco  14-07-2023 
       </p>
       <div class="pics">
-        <img src="Imgs/React/GIf.gif" class="react1-pic">
-        <img src="Imgs/React/JS.gif" class="react2-pic">
-        <img src="Imgs/React/other-react.png" class="react3-pic">
+        <img src="../../Imgs/React/GIf.gif" class="react1-pic">
+        <img src="../../Imgs/React/JS.gif" class="react2-pic">
+        <img src="../../Imgs/React/other-react.png" class="react3-pic">
       </div>
     </div>
   </body>
