--- a/src/HTML/index.html
+++ b/src/HTML/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
     <title>Inicio | N</title>
-    <link rel="stylesheet" href="style_index.css">
-    <link rel="icon" type="image/png" href="LOGO-NESTEA-COLOR.png"/>
+    <link rel="stylesheet" href="../CSS/style_index.css">
+    <link rel="icon" type="image/png" href="../../Imgs/Other/LOGO-NESTEA-COLOR.png"/>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-KXZ6KKSG07"></script>
     <script>
@@ -15,7 +15,7 @@
   <body>
     <div class="banner">
       <div class="navbar">
-        <img size="10%" src="LOGO-NESTEA-BLANCO.png" class="logo" href="Sobre-mi.html">
+        <img size="10%" src="../../Imgs/Other/LOGO-NESTEA-BLANCO.png" class="logo" href="Sobre-mi.html">
         <ul>
           <li><a href="index.html">Inicio</a></li>
           <li><a href="Blogs.html">Proyectos</a></li>
@@ -24,7 +24,7 @@
       </div>
       <div class="content">
         <h1>Néstor Blanco</h1>
-        <img src="LOGO-NESTEA-COLOR.png" class="logo_p">
+        <img src="../../Imgs/Other/LOGO-NESTEA-COLOR.png" class="logo_p">
         <p>La historia de mi carrera como programador. <br>Todo lo que he hecho y todo lo que sé hacer.</p>
       </div>
     </div>
