--- a/src/HTML/micomienzo.html
+++ b/src/HTML/micomienzo.html
@@ -1,8 +1,8 @@
 <html>
   <head>
       <title>Mi Comienzo | N</title>
-      <link rel="stylesheet" href="style_micomienzo.css">
-      <link rel="icon" type="image/png" href="LOGO-NESTEA-COLOR.png"/>
+      <link rel="stylesheet" href="../CSS/style_micomienzo.css">
+      <link rel="icon" type="image/png" href="../../Imgs/Other/LOGO-NESTEA-COLOR.png"/>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-KXZ6KKSG07"></script>
     <script>
@@ -15,7 +15,7 @@
   <body>
     <div class="banner">
       <div class="navbar">
-        <img size="10%" src="LOGO-NESTEA-BLANCO.png" class="logo" href="Sobre-mi.html">
+        <img size="10%" src="../../Imgs/Other/LOGO-NESTEA-BLANCO.png" class="logo" href="Sobre-mi.html">
         <ul>
           <li><a href="index.html">Inicio</a></li>
           <li><a href="Blogs.html">Proyectos</a></li>
@@ -116,10 +116,10 @@
       -Néstor Blanco  11-09-2022 
       </p>
       <div class="pics">
-        <img src="html.png" size="10%" class="html-pic">
-        <img src="000webhost.png" size="10%" class="webhostapp-pic">
-        <div id="rectangle1"><img src="Wix-Logo.png" size="10%" class="wix-pic"></div>
-        <img src="css.png" size="10%" class="css-pic">
+        <img src="../../Imgs/Other/html.png" size="10%" class="html-pic">
+        <img src="../../Imgs/Other/000webhost.png" size="10%" class="webhostapp-pic">
+        <div id="rectangle1"><img src="../../Imgs/Other/Wix-Logo.png" size="10%" class="wix-pic"></div>
+        <img src="../../Imgs/Other/css.png" size="10%" class="css-pic">
       </div>
     </div>
   </body>
