--- a/src/HTML/rust.html
+++ b/src/HTML/rust.html
@@ -1,8 +1,8 @@
 <html>
   <head>
       <title>Rust | N</title>
-      <link rel="stylesheet" href="style-rust.css">
-      <link rel="icon" type="image/png" href="LOGO-NESTEA-COLOR.png"/>
+      <link rel="stylesheet" href="../CSS/style-rust.css">
+      <link rel="icon" type="image/png" href="../../Imgs/Other/LOGO-NESTEA-COLOR.png"/>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-KXZ6KKSG07"></script>
     <script>
@@ -15,7 +15,7 @@
   <body>
     <div class="banner">
       <div class="navbar">
-        <img size="10%" src="LOGO-NESTEA-BLANCO.png" class="logo" href="Sobre-mi.html">
+        <img size="10%" src="../../Imgs/Other/LOGO-NESTEA-BLANCO.png" class="logo" href="Sobre-mi.html">
         <ul>
           <li><a href="index.html">Inicio</a></li>
           <li><a href="Blogs.html">Proyectos</a></li>
@@ -76,8 +76,8 @@
       -Néstor Blanco  11-06-2023 
       </p>
       <div class="pics">
-        <img src="Imgs/Rust/rust1.png" class="rust1-pic">
-        <img src="Imgs/Rust/rust2.png" class="rust2-pic">
+        <img src="../../Imgs/Rust/rust1.png" class="rust1-pic">
+        <img src="../../Imgs/Rust/rust2.png" class="rust2-pic">
       </div>
     </div>
   </body>
