Main page broken, fix later

--- a/src/HTML/index.html
+++ b/src/HTML/index.html
@@ -23,9 +23,10 @@
         </ul>
       </div>
       <div class="content">
+        <img src="../../Imgs/Other/LOGO-NESTEA-COLOR.png">
         <h1>Néstor Blanco</h1>
-        <img src="../../Imgs/Other/LOGO-NESTEA-COLOR.png" class="logo_p">
-        <p>La historia de mi carrera como programador. <br>Todo lo que he hecho y todo lo que sé hacer.</p>
+        <p>La historia de mi carrera como programador. 
+        <br>Todo lo que he hecho y todo lo que sé hacer.</p>
       </div>
     </div>
   </body>
